--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -23,6 +23,7 @@ tr:nth-child(even) {
 </head>
 <body>
 	<h3>사용자 페이지 입니다</h3>
+	<h4 th:text="${name}+'님 환영합니다!' "></h4>
 	<input id='d_userId'  type="text" placeholder="아이디를 입력해주세요"/>
 	<button type="button" onclick="doDelete()">삭제</button>
 	
