--- a/src/main/resources/templates/Login3.html
+++ b/src/main/resources/templates/Login3.html
@@ -7,6 +7,7 @@
 <body>
 	<h3>DW 회원가입</h3>
 	<input id='userId'  type="text" placeholder="아이디를 입력해주세요"/>
+	<button type="button" onclick="doCheck()">아이디 체크</button>
 	<input id='userName'  type="text" placeholder="이름을 입력해주세요"/>
 	<input id='userPw'  type="text" placeholder="비밀번호를 입력해주세요"/>
 	<button type="button" onclick="doJoin()">회원가입</button>
@@ -30,6 +31,30 @@
 	   
 <script type="text/javascript">
 
+	var isCheck = false;
+	
+	//아이디 중복 체크 : 이미 가입된 아이디 찾기!
+	function doCheck(){
+		
+		var id = $('#userId').val();
+		$.ajax({
+			url : '/api/v1/users/'+id,
+			type : 'GET',
+			dataType : 'json',
+			success : function(response) {
+				//true면 이미 가입한 아이디가 존재!
+				if(response){
+					alert('이미 가입된 아이디입니다!');
+					return false;
+				}else{
+					alert('사용가능한 아이디입니다!');
+					isCheck = true;
+					return false;
+				}
+			}
+		});
+	}
+
 	function doLogin(){
 		
 		var id = $('#i_userId').val();
@@ -46,8 +71,8 @@
 		    data : JSON.stringify(jsonData),
 		    dataType: 'json',
 			success: function (response) {
-			console.log(response);
-				if(response == 1){
+				if(response.user){
+					alert(response.name+"환영합니다")
 				  // 페이지 이동 로직 구현
 				  location.href = "/users";
 				}
